// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Skeleton > avatar > shape 1`] = `
"<div class="xy-skeleton xy-skeleton-with-avatar css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-skeleton-header"><span class="xy-skeleton-avatar xy-skeleton-avatar-lg xy-skeleton-avatar-circle"></span></div>
  <div class="xy-skeleton-content">
    <h3 class="xy-skeleton-title" style="width: 50%;"></h3>
    <ul class="xy-skeleton-paragraph">
      <li></li>
      <li></li>
    </ul>
  </div>
</div>"
`;

exports[`Skeleton > avatar > shape 2`] = `
"<div class="xy-skeleton xy-skeleton-with-avatar css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-skeleton-header"><span class="xy-skeleton-avatar xy-skeleton-avatar-lg xy-skeleton-avatar-square"></span></div>
  <div class="xy-skeleton-content">
    <h3 class="xy-skeleton-title" style="width: 50%;"></h3>
    <ul class="xy-skeleton-paragraph">
      <li></li>
      <li></li>
    </ul>
  </div>
</div>"
`;

exports[`Skeleton > avatar > size 1`] = `
"<div class="xy-skeleton xy-skeleton-with-avatar css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-skeleton-header"><span class="xy-skeleton-avatar xy-skeleton-avatar-sm xy-skeleton-avatar-circle"></span></div>
  <div class="xy-skeleton-content">
    <h3 class="xy-skeleton-title" style="width: 50%;"></h3>
    <ul class="xy-skeleton-paragraph">
      <li></li>
      <li></li>
    </ul>
  </div>
</div>"
`;

exports[`Skeleton > avatar > size 2`] = `
"<div class="xy-skeleton xy-skeleton-with-avatar css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-skeleton-header"><span class="xy-skeleton-avatar xy-skeleton-avatar-circle"></span></div>
  <div class="xy-skeleton-content">
    <h3 class="xy-skeleton-title" style="width: 50%;"></h3>
    <ul class="xy-skeleton-paragraph">
      <li></li>
      <li></li>
    </ul>
  </div>
</div>"
`;

exports[`Skeleton > avatar > size 3`] = `
"<div class="xy-skeleton xy-skeleton-with-avatar css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-skeleton-header"><span class="xy-skeleton-avatar xy-skeleton-avatar-lg xy-skeleton-avatar-circle"></span></div>
  <div class="xy-skeleton-content">
    <h3 class="xy-skeleton-title" style="width: 50%;"></h3>
    <ul class="xy-skeleton-paragraph">
      <li></li>
      <li></li>
    </ul>
  </div>
</div>"
`;

exports[`Skeleton > avatar > size 4`] = `
"<div class="xy-skeleton xy-skeleton-with-avatar css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-skeleton-header"><span class="xy-skeleton-avatar xy-skeleton-avatar-circle" style="width: 20px; height: 20px; line-height: 20px;"></span></div>
  <div class="xy-skeleton-content">
    <h3 class="xy-skeleton-title" style="width: 50%;"></h3>
    <ul class="xy-skeleton-paragraph">
      <li></li>
      <li></li>
    </ul>
  </div>
</div>"
`;

exports[`Skeleton > paragraph > rows 1`] = `
"<div class="xy-skeleton css-dev-only-do-not-override-1p3hq3p">
  <!---->
  <div class="xy-skeleton-content">
    <h3 class="xy-skeleton-title" style="width: 38%;"></h3>
    <ul class="xy-skeleton-paragraph">
      <li></li>
      <li></li>
      <li></li>
      <li></li>
      <li style="width: 61%;"></li>
    </ul>
  </div>
</div>"
`;

exports[`Skeleton > paragraph > width 1`] = `
"<div class="xy-skeleton css-dev-only-do-not-override-1p3hq3p">
  <!---->
  <div class="xy-skeleton-content">
    <h3 class="xy-skeleton-title" style="width: 38%;"></h3>
    <ul class="xy-skeleton-paragraph">
      <li></li>
      <li></li>
      <li style="width: 93%;"></li>
    </ul>
  </div>
</div>"
`;

exports[`Skeleton > paragraph > width 2`] = `
"<div class="xy-skeleton css-dev-only-do-not-override-1p3hq3p">
  <!---->
  <div class="xy-skeleton-content">
    <h3 class="xy-skeleton-title" style="width: 38%;"></h3>
    <ul class="xy-skeleton-paragraph">
      <li style="width: 28%;"></li>
      <li style="width: 93%;"></li>
      <li></li>
    </ul>
  </div>
</div>"
`;

exports[`Skeleton > title > width 1`] = `
"<div class="xy-skeleton css-dev-only-do-not-override-1p3hq3p">
  <!---->
  <div class="xy-skeleton-content">
    <h3 class="xy-skeleton-title" style="width: 93%;"></h3>
    <ul class="xy-skeleton-paragraph">
      <li></li>
      <li></li>
      <li style="width: 61%;"></li>
    </ul>
  </div>
</div>"
`;
